--- a/app/src/main/res/layout/activity_child_list_display.xml
+++ b/app/src/main/res/layout/activity_child_list_display.xml
@@ -1,54 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--suppress ALL -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ChildListDisplay">
+    <!--suppress ALL -->
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".ChildListDisplay">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/imageChild"
-        android:layout_width="104dp"
-        android:layout_height="99dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="22dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="16dp"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
-    <TextView
-        android:id="@+id/txtChildName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="16dp"
-        android:layout_toEndOf="@+id/imageView2"
-        android:text="Name"
-        android:textStyle="bold"
-        android:textSize="16dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txtCurrentLoc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txtChildName"
-        android:layout_alignStart="@+id/txtChildName"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="18dp"
-        android:text="Current Location" />
+            <TextView
+                android:id="@+id/txtChildName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="21dp"
+                android:layout_marginTop="16dp"
+                android:text="Name"
+                android:textStyle="bold"
+                android:textSize="16dp"/>
 
-    <TextView
-        android:id="@+id/txtBattStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txtCurrentLoc"
-        android:layout_alignStart="@+id/txtChildName"
-        android:layout_alignBottom="@+id/imageView2"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginBottom="4dp"
-        android:text="Device Battery Status" />
-</RelativeLayout>
+            <TextView
+                android:id="@+id/txtCurrentLoc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="21dp"
+                android:layout_marginTop="16dp"
+                android:text="Current Location"
+                android:textSize="16dp"/>
+
+
+            <TextView
+                android:id="@+id/txtBattStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="21dp"
+                android:layout_marginTop="16dp"
+                android:text="Battery Status"
+                android:textSize="16dp"/>
+
+
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
