--- a/app/src/main/res/layout/activity_guardian_registration.xml
+++ b/app/src/main/res/layout/activity_guardian_registration.xml
@@ -8,12 +8,12 @@
     tools:context=".GuardianRegistration"
     background="#FFF9C4"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@drawable/androidbgplain">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        android:layout_height="500dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -66,25 +66,54 @@
 
                 />
 
-            <EditText
-                android:id="@+id/editbday"
+            <TextView
+                android:id="@+id/txtbday"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10sp"
+                android:layout_marginLeft="18dp"
+                android:layout_marginBottom="15dp"
                 android:ems="10"
-                android:hint="@string/birthday"
-                android:inputType="date"
-                />
+                android:hint="Select Birthdate"
+                android:textSize="20dp" />
+                <!--android:inputType="date"-->
 
-            <EditText
-                android:id="@+id/editgender"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_marginTop="10sp"
-                android:ems="10"
-                android:hint="@string/gender"
-                />
 
+            <!--<EditText-->
+                <!--android:id="@+id/editgender"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="48dp"-->
+                <!--android:layout_marginTop="10sp"-->
+                <!--android:ems="10"-->
+                <!--android:hint="@string/gender"-->
+                <!--/>-->
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+<RadioGroup
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal">
+
+    <RadioButton
+        android:id="@+id/rdmale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Male" />
+    <RadioButton
+        android:id="@+id/rdfem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Female"/>
+
+</RadioGroup>
+
+</LinearLayout>
+</RelativeLayout>
             <EditText
                 android:id="@+id/editcontactnumber"
                 android:layout_width="wrap_content"
@@ -152,12 +181,14 @@
         <Button
             android:id="@+id/btn_signup"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:background="#ED820E"
-            android:textSize="20sp"
-            android:text="@string/signup"
-            android:layout_width="match_parent"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center"
+            android:background="@drawable/round"
+            android:textSize="20sp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginBottom="40dp"
+            android:textColor="@color/color3"
+            android:text="@string/signup"
             />
     </LinearLayout>
 
