--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -4,32 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomePage">
+    tools:context=".HomePage"
+    android:background="@drawable/androidbg">
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="match_parent"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:width="200dp"
-        android:height="60dp"
-        android:background="#ED820E"
-        android:text="@string/login"
+        android:background="@drawable/round"
         android:textSize="20sp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/color3"
+        android:text="@string/login"
+        android:fontFamily="@font/phagspa"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/btn_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btn_signup"
-        android:layout_width="match_parent"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:height="60dp"
-        android:width="200dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="200dp"
+        android:background="@drawable/round"
         android:text="@string/signup"
-        android:background="#ED820E"
-        android:textSize="20sp">
+        android:textSize="20sp"
+        android:textColor="@color/color3"
+        android:fontFamily="@font/phagspa"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="32dp">
 
     </Button>
 
