--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -8,7 +8,8 @@
     tools:context=".UserLogin"
     background="#FFF9C4"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@drawable/androidbgplain">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -29,6 +30,7 @@
                 android:layout_marginTop="150dp"
                 android:layout_marginBottom="48dp"
                 android:ems="10"
+                android:textColor="@color/color3"
                 android:hint="@string/Username"
                 android:inputType="textPersonName" />
 
@@ -39,6 +41,7 @@
                 android:layout_marginBottom="196dp"
                 android:ems="10"
                 android:hint="@string/Password"
+                android:textColor="@color/color3"
                 android:inputType="textPassword" />
 
 
@@ -59,11 +62,15 @@
         <Button
             android:id="@+id/btn_login"
             style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="match_parent"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:background="#ED820E"
+            android:background="@drawable/round"
             android:textSize="20sp"
+            android:layout_marginLeft="36dp"
+            android:layout_marginBottom="50dp"
+            android:textColor="@color/color3"
             android:text="@string/login"
+
             />
     </LinearLayout>
 
